--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/js/index.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/index.js" type="module"></script>
+    <script src="/js/script.js" type="module"></script>
 </body>
 </html>
